# netcheck

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
netcheck/: __init__.py  datatypes.py  network_check.py  rich_console.py  sync_check.py
netcheck/scripts/: __init__.py  netcheck.py
tests/: test_network_check.py
